# shizoid-tg-bot

./: .gitignore  README.md  pyproject.toml
shizoid_bot/: config.py  main.py
shizoid_bot/exceptions/: exceptions.py
shizoid_bot/filters/: group_filters.py
shizoid_bot/handlers/: group_handlers.py  private_handlers.py
shizoid_bot/keyboards/: keyboards.py
shizoid_bot/middlewares/: logging_middleware.py  media_filter_middleware.py  media_group_middleware.py  throttling_middleware.py
shizoid_bot/services/: openai_api.py
shizoid_bot/texts/: bot_buttons.py  bot_messages.py  system_message.py  system_messages.py
shizoid_bot/utils/: db.py  helpers.py  rate_limiter.py  time_utils.py
